--- a/proyecto-final-ggf/src/components/css/cards.css
+++ b/proyecto-final-ggf/src/components/css/cards.css
@@ -1,5 +1,5 @@
 .card-fixed {
-    height: 20%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -24,8 +24,11 @@
     scrollbar-color: #ccc transparent;
     padding-right: 8px;
     margin-right: -8px;
+    margin-top: 15px;
+    padding-top: 10px;
     border-radius: 4px;
     border-top: 1px solid rgba(9, 9, 9, .1);
+
   }
   
   .card-button {
@@ -48,4 +51,26 @@
     background-color: rgba(9, 9, 9, .1);
     border: 1px solid #ccc;
   }
-  
+
+.login-button {
+  color: rgba(180, 190, 160, 1) !important;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+  text-align: center;
+}
+
+.login-button:hover {
+  color: #6379c2 !important;
+}
+
+.log-out-button {
+  color: rgba(180, 190, 160, 1) !important;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+  text-align: center;
+}
+
+.log-out-button:hover {
+  color: rgb(218, 115, 115) !important;
+}
+
