--- a/src/components/css/cards.css
+++ b/src/components/css/cards.css
@@ -28,7 +28,19 @@
     padding-top: 10px;
     border-radius: 4px;
     border-top: 1px solid rgba(9, 9, 9, .1);
+  }
 
+  .card-empty{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 900;
+    border-bottom: black 1px solid;
+  }
+
+  .card-title{
+    padding: 10px;
+    border-radius: 50px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 900;
   }
   
   .card-button {
@@ -73,4 +85,39 @@
 .log-out-button:hover {
   color: rgb(218, 115, 115) !important;
 }
+
+.container-cart{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(4px);
+}
+
+.list-products{
+  width: 100%;
+}
+
+.contact-input{
+  margin-bottom: 20px;
+  width: 50%;
+}
+
+.contact-input input, .contact-input textarea{
+  background-color: transparent;
+  border-radius: 0;
+  border: none;
+  border-bottom: 1px solid #fff;
+  color: white;
+  transition: border-color 0.3s;
+}
+
+.contact-input input:focus, .contact-input textarea:focus{
+  outline: none;
+  box-shadow: none;
+  border-bottom: 2px solid #ff0000; 
+  background-color: transparent;
+}
+
 
