--- a/src/components/css/cards.css
+++ b/src/components/css/cards.css
@@ -121,3 +121,11 @@
 }
 
 
+.search-bar{
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 10px;
+  width: 100%;
+  border: none;
+  transition: 0.3s ease-in-out;
+  color: #fff;
+}
